# kinect_webcam

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: conan_build.yml
cmake/: build_opencv.cmake  build_strmbase.cmake  glob_sources.cmake
src/: CMakeLists.txt  com_utils.h  device.h  device_factory.cpp  device_factory.h  device_kinect.cpp  device_kinect.h  device_kinect_v2.cpp  device_kinect_v2.h  dll.cpp  filter_video.cpp  filter_video.h  filters.def  image.cpp  settings.cpp  settings.h  settings_list.h
src/common/: com_utils.h  guid_filter.cpp  guid_filter.h  settings.cpp  settings.h  settings_list.h
src/filter/: CMakeLists.txt  device.h  device_factory.cpp  device_factory.h  device_kinect.cpp  device_kinect.h  device_kinect_v2.cpp  device_kinect_v2.h  device_null.cpp  device_null.h  dll.cpp  filter_video.cpp  filter_video.h  image.cpp  image.h  kinect_v2_wrapper.cpp  kinect_v2_wrapper.h  kinect_wrapper.cpp  kinect_wrapper.h
src/ui/: CMakeLists.txt  com_register.cpp  com_register.h  ds_capture.cpp  ds_capture.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_utils.cpp  qt_utils.h
